fix (scout): control horizontal scroll on mobile

--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #ffffff;
     min-height: 100vh;
     color: #1a1a1a;
+    overflow-x: auto;
 }
 
 /* Headings */
